--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
